--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
-    "bootstrap": "^4.2.1",
+    "bootstrap-scss": "^4.2.1",
     "electron": "^4.0.0",
     "rxjs": "^6.3.3"
   },
