--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "bootstrap-scss": "^4.2.1",
     "custom-electron-titlebar": "github:Mateo-M/custom-electron-titlebar",
-    "electron": "^4.1.1",
+    "electron": "^4.1.3",
+    "node-stream-zip": "^1.8.0",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
